--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emailjs/browser": "^4.4.1",
     "@react-three/drei": "^9.114.3",
     "@react-three/fiber": "^8.17.10",
+    "bootstrap": "^5.3.3",
     "framer-motion": "^11.11.7",
     "gsap": "^3.12.5",
     "maath": "^0.10.8",
@@ -20,6 +21,7 @@
     "react-router-dom": "^6.26.2",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
+    "styled-components": "^6.1.13",
     "three": "^0.169.0"
   },
   "devDependencies": {
